[metadata]
# inluding the license file in the wheel
license_files = LICENSE
# including the readme file as description
long_description = file: README.md
long_description_content_type = text/markdown

[tool:pytest]
filterwarnings =
	ignore:`np.bool` is a deprecated alias for the builtin `bool`:DeprecationWarning

[isort]
profile = black
line_length = 120
src_paths = pathfinding3d, test, examples

[coverage:run]
source = pathfinding3d

[coverage:report]
show_missing = True
exclude_also =
    def __repr__
    def __str__
    def __lt__
    def __eq__

[pylint]
disable =
	missing-docstring,
	invalid-name,
	too-many-instance-attributes,
	too-many-locals,
	too-many-nested-blocks,
	too-many-public-methods,
	too-few-public-methods,
	too-many-arguments,
	too-many-branches,
	# many functions will naturally have unused arguments.
	unused-argument,

[pylint.FORMAT]
max-line-length = 120

[mypy]
ignore_missing_imports = True
follow_imports = silent
show_error_codes = True
show_column_numbers = True
